# openkoi

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
evaluators/api-design/: SKILL.md
evaluators/code-review/: SKILL.md
evaluators/general/: SKILL.md
evaluators/prose-quality/: SKILL.md
evaluators/sql-safety/: SKILL.md
evaluators/test-quality/: SKILL.md
skills/self-iterate/: SKILL.md
src/: lib.rs  main.rs  util.rs
src/api/: auth.rs  handlers.rs  mod.rs  types.rs  webhooks.rs
src/auth/: mod.rs  oauth.rs
src/cli/: chat.rs  connect.rs  export.rs  init.rs  learn.rs  migrate.rs  mod.rs  progress.rs  run.rs  status.rs  update.rs
src/core/: cost.rs  eval_cache.rs  executor.rs  mod.rs  orchestrator.rs  overflow.rs  safety.rs  state.rs  system_prompt.rs  token_budget.rs  token_optimizer.rs  truncation.rs  types.rs
src/evaluator/: calibration.rs  incremental.rs  judge.rs  mod.rs  parser.rs  static_analysis.rs  test_runner.rs  utils.rs
src/infra/: config.rs  daemon.rs  errors.rs  logger.rs  mod.rs  paths.rs  session.rs
src/infra/daemon/: handler.rs  mod.rs  process.rs  scheduler.rs  status.rs
src/integrations/: credentials.rs  discord.rs  email.rs  google_docs.rs  google_sheets.rs  imessage.rs  mod.rs  msoffice.rs  msteams.rs  notion.rs  registry.rs  slack.rs  telegram.rs  tools.rs  types.rs  watcher.rs
src/learner/: dedup.rs  extractor.rs  mod.rs  skill_selector.rs  types.rs
src/memory/: compaction.rs  decay.rs  embeddings.rs  mod.rs  recall.rs  schema.rs  store.rs  store_server.rs
src/memory/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_vector_search.down.sql  002_vector_search.up.sql
src/onboarding/: credentials.rs  discovery.rs  mod.rs  picker.rs
src/patterns/: event_logger.rs  miner.rs  mod.rs  skill_proposer.rs
src/plugins/: hooks.rs  mcp.rs  mod.rs  rhai_host.rs  wasm.rs
src/provider/: anthropic.rs  bedrock.rs  fallback.rs  github_copilot.rs  google.rs  mod.rs  model_cache.rs  ollama.rs  openai.rs  openai_compat.rs  openai_oauth.rs  resolver.rs  retry.rs  roles.rs
src/security/: mod.rs  permissions.rs
src/skills/: eligibility.rs  frontmatter.rs  loader.rs  mod.rs  registry.rs  types.rs
src/soul/: evolution.rs  loader.rs  mod.rs
src/tui/: app.rs  data.rs  mod.rs  theme.rs
src/tui/widgets/: config.rs  costs.rs  learnings.rs  mod.rs  overview.rs  plugins.rs  tasks.rs
templates/: SOUL.md
tests/: e2e.sh  integrations_test.rs  onboarding_test.rs  orchestrator_test.rs  recall_test.rs  skills_test.rs  store_test.rs
