[package]
name = "openkoi"
version = "2026.2.24"
edition = "2021"
description = "AI coding agent that reviews its own work. Plan-Execute-Evaluate-Refine loop. Single binary, any model."
license = "MIT"
repository = "https://github.com/openkoi-ai/openkoi"
homepage = "https://openkoi.ai"
keywords = ["ai", "agent", "llm", "automation", "self-iterating"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "openkoi"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + SSE streaming
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2", "system-proxy"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
toml = "0.8"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.6"

# Prompt templating
minijinja = "2"

# Markdown parsing
pulldown-cmark = "0.12"

# TUI / interactive
inquire = "0.7"
ratatui = "0.30"
crossterm = "0.29"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP API server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
which = "7"
directories = "6"
dirs = "5"
async-trait = "0.1"
async-stream = "0.3"
getrandom = "0.2"
futures = "0.3"
pin-project = "1"
slug = "0.1"
glob = "0.3"
url = "2"
strsim = "0.11"

# WASM plugins
wasmtime = { version = "41", default-features = false, features = ["cranelift", "runtime", "std"] }

# Scripting
rhai = "1.24"

# Email (IMAP/SMTP)
imap = { version = "3.0.0-alpha.15", default-features = false, features = ["rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
mailparse = "0.15"

# Archive extraction (self-update)
flate2 = "1"
tar = "0.4"

# Crypto (checksum verification)
sha2 = "0.10"
hex = "0.4"

# Office file formats (ZIP-based docx/xlsx)
zip = "2"

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1", features = ["yaml"] }
mockall = "0.13"
tempfile = "3.25.0"
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "benchmarks"
harness = false
